--- a/src/Zip Tests/Zip Tests.csproj
+++ b/src/Zip Tests/Zip Tests.csproj
@@ -165,6 +165,9 @@
     <Content Include="zips\relative-paths-in-subdir-outside.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="zips\absolute-path-traversal.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="zips\winzip-sfx.exe">
